--- a/src/AppBundle/Resources/views/Login/login.html.twig
+++ b/src/AppBundle/Resources/views/Login/login.html.twig
@@ -21,7 +21,7 @@
 
             <div class="form-group">
                 <label for="password">Password:</label>
-                <input type="text" name="_password" id="password" class="form-control">
+                <input type="password" name="_password" id="password" class="form-control">
             </div>
 
             <button class="btn btn-info pull-right">Connect </button>
