--- a/src/AppBundle/Resources/views/Register/register.html.twig
+++ b/src/AppBundle/Resources/views/Register/register.html.twig
@@ -8,6 +8,9 @@
             <h3 class="text-center">Register</h3>
         </div>
         <div class="panel-body">
+            <div class="form-group">
+
+            </div>
             {{ form(form) }}
         </div>
     </div>
